<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".AddExpense"
    android:onClick="hideKeyboard"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="406dp"
        android:layout_marginEnd="112dp"
        android:layout_marginTop="3dp"
        android:text="Add An Expense"
        android:textColor="#ff0000"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddExpense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewAddBack"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Expense Name"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAddBack" />

    <EditText
        android:id="@+id/editDeleteTextName"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/expenseName"
        android:inputType="textPersonName"
        android:maxLength="23"

        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAddBack" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="16dp"
        android:text="Category"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDeleteTextName" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3">


    </Spinner>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="16dp"
        android:text="@string/amount"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editDeleteTextAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/editDeleteTextAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:hint="@string/editAmount"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewDeleteDate"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="Date"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewDeleteDate"
        app:layout_constraintStart_toStartOf="@+id/editDeleteTextAmount" />

    <Button
        android:id="@+id/buttonAddExpense"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recepite"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewReceipte"
        app:layout_constraintStart_toStartOf="@+id/imageViewReceipte"
        app:layout_constraintTop_toBottomOf="@+id/textViewDeleteDate" />

    <ImageView
        android:id="@+id/imageViewReceipte"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="84dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/bluepic" />

    <TextView
        android:id="@+id/textViewDeleteDate"
        android:layout_width="212dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:hint="Select Date"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/editDeleteTextAmount" />

    <ImageView
        android:id="@+id/imageViewAddBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/editDeleteTextName"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back22" />
</android.support.constraint.ConstraintLayout>