<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="hideKeyboard"
    tools:context=".EdditActivity"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:layout_marginStart="16dp"
        android:text="Expense Name"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDeleteSelect" />

    <EditText
        android:id="@+id/editDeleteTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/selectFirst"
        android:inputType="textPersonName"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:text="Category"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/editDeleteTextName"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/Deletespinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="98dp"
        android:layout_marginTop="17dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBack">

    </Spinner>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/amount"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editDeleteTextAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editDeleteTextAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/selectFirst"
        android:inputType="numberDecimal"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewDeleteDate"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:text="Date"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewEditReceipte"
        app:layout_constraintStart_toStartOf="@+id/editDeleteTextAmount"
        app:layout_constraintTop_toBottomOf="@+id/Deletespinner" />

    <Button
        android:id="@+id/buttonAddExpense"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"

        android:background="@drawable/greensave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:text="@string/receipte"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddExpense"
        app:layout_constraintStart_toStartOf="@+id/textViewDeleteDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewDeleteDate" />

    <TextView
        android:id="@+id/textViewDeleteDate"
        android:layout_width="212dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:hint="Select Date"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDeleteTextAmount" />

    <Button
        android:id="@+id/buttonDeleteSelect"
        android:layout_width="186dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="130dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/roundbutton"
        android:backgroundTint="#00A693"
        android:text="Select Expense "
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewBack"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewEditReceipte"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="74dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/bluepic" />

    <ImageView
        android:id="@+id/imageViewBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="112dp"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        app:layout_constraintBottom_toTopOf="@+id/Deletespinner"
        app:layout_constraintEnd_toStartOf="@+id/buttonDeleteSelect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back22" />

</android.support.constraint.ConstraintLayout>